apps/welcome-php/base/welcome-php-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-php
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  rules:
    - host: welcome-php.mk-devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: welcome-php
                port:
                  number: 8080
